# WatchDog

./: LICENSE  api.Dockerfile  discord.Dockerfile  docker-compose.yaml  pyproject.toml  scheduler.Dockerfile  tracking.Dockerfile
src/api/: pyproject.toml
src/api/api/: dependencies.py  main.py
src/api/api/models/: __init__.py  player.py  user.py
src/api/api/routers/: player.py  user.py
src/scheduler/: pyproject.toml
src/scheduler/scheduler/: __init__.py  main.py
src/shared/: pyproject.toml
src/shared/shared/: async_extensions.py  coc_utils.py  config.py  logging.py
src/tracking/: pyproject.toml
src/tracking/tracking/: __init__.py  main.py
src/watchdog/: pyproject.toml
src/watchdog/watchdog/: __init__.py  autocomplete.py  custom_bot.py  emojis.py  main.py
src/watchdog/watchdog/background/: __init__.py  event_websockets.py
src/watchdog/watchdog/cogs/: autoupdate.py  discord_events.py  general.py  group.py  leaderboard.py  liveticker.py  notifications.py  player.py  setup.py
src/watchdog/watchdog/components/: __init__.py  commands.py  dropdown.py  help.py  paginator.py  question.py
src/watchdog/watchdog/components/player/: __init__.py
src/watchdog/watchdog/components/player/embeds/: __init__.py  player_overview.py  player_season_overview.py  player_season_stats.py
src/watchdog/watchdog/components/player/player_search/: __init__.py  player_search.py  season_days_option.py  season_overview_option.py  season_stats_option.py
src/watchdog/watchdog/components/player_list/: __init__.py  player_simple.py  player_table.py
src/watchdog/watchdog/components/setup/: __init__.py  clan_setup.py
